# workflow

./: .clippy.toml  .gitignore  2  3  4  5  AGENTS.md  ARCH.md  ARCHITECTURE.md  ARCHTECHTURE.md  Cargo.toml  LICENSE  PLAN.md  PROBLEMS.md  README.md  REVIEW_REPORT.md  SYSTEM_ARCHITECTURE.md  TOOLS.md  TOOLS_INVOCATION.md  TOOLS_SIMPLIFICATION.md  api.json  base_model.json  ci.sh  discussion_summary.md  helper.py  package-lock.json  plan_context_enhancement.md  skills-lock.json  tui-preview.html  tui_mockup.html  tui_preview.html  tui_preview.txt  经验不保存问题调查报告.md
.github/skills/better-codebase/: SKILL.md
.github/skills/self-evolving/: SKILL.md
.github/workflows/: ci.yml
.mimocode/plans/: 1781245571848-gentle-moon.md  no-dialog.md  tui-redesign.md
.opencode/: opencode.json
.opencode/plugin/: workflow-bridge.js
crates/agent/: Cargo.toml
crates/agent/src/: agent_pool.rs  lib.rs  protocol.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: dynamic_tools.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  config.rs  error.rs  lib.rs  server.rs  tool.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/providers/: Cargo.toml
crates/providers/src/: cache.rs  error.rs  lib.rs  model.rs  repository.rs  service.rs  store.rs
crates/role/: Cargo.toml
crates/role/src/: lib.rs
crates/tool/: Cargo.toml
crates/tool/src/: dynamic_tools.rs  lib.rs  list_agents.rs  orchestrate.rs  send_message.rs
crates/wf-agent/: Cargo.toml
crates/wf-agent/src/: agent.rs  lib.rs  plan.rs  suspend.rs
crates/wf-core/src/: constants.rs  event.rs  guard.rs  lib.rs  metrics.rs  task_graph.rs  types.rs
crates/wf-experience/src/: clustering.rs  dual_track.rs  lib.rs  pool.rs  role_template_store.rs
crates/wf-l1/src/: lib.rs
crates/wf-l2/src/: lib.rs
crates/wf-llm/src/: chat.rs  embedding.rs  lib.rs  mod.rs  types.rs
crates/wf-models/src/: config.rs  lib.rs  models.rs  provider.rs
crates/wf-persistence/src/: lib.rs
crates/wf-reflection/: Cargo.toml
crates/wf-reflection/src/: lib.rs
crates/wf-runtime/src/: checkpoint.rs  l0.rs  lib.rs  state.rs  test_utils.rs
crates/wf-tools/: Cargo.toml
crates/wf-tools/src/: agent.rs  builtin.rs  diff_edit.rs  lib.rs  memo.rs
crates/wf-tui/: Cargo.toml
crates/wf-tui/src/: lib.rs
crates/wf-tui/src/tui/: agent_tree.rs  chat.rs  chat_lines.rs  controller.rs  effect.rs  handler.rs  mod.rs  popup.rs  render.rs  runtime_bridge.rs  state.rs
crates/wf-tui/src/tui/command_tree/: handlers.rs  mod.rs  parser.rs  provider.rs
crates/wf-workflow/: Cargo.toml
crates/wf-workflow/src/: main.rs
crates/workflow/: Cargo.toml
crates/workflow-ui/: .gitignore  components.json  package.json  vitest.config.ts
crates/workflow-ui/src/: app.css  app.html
crates/workflow-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/workflow-ui/src-tauri/capabilities/: default.json
crates/workflow-ui/src-tauri/src/: lib.rs  main.rs
crates/workflow/src/: lib.rs  main.rs
crates/workflow/tests/: config_test.rs
crates_bak/wf-agent/src/: agent.rs  lib.rs  sandbox.rs
crates_bak/wf-core/: Cargo.toml
crates_bak/wf-core/src/: conflict.rs  guard.rs  lib.rs  simd.rs  types.rs
crates_bak/wf-experience/: Cargo.toml
crates_bak/wf-experience/src/: clustering.rs  dual_track.rs  lib.rs  simple_retriever.rs
crates_bak/wf-l1/: Cargo.toml
crates_bak/wf-l2/: Cargo.toml
crates_bak/wf-l2/src/: lib.rs
crates_bak/wf-llm/: Cargo.toml
crates_bak/wf-llm/src/: chat.rs  embedding.rs
crates_bak/wf-models/: Cargo.toml
crates_bak/wf-persistence/: Cargo.toml
crates_bak/wf-reflection/src/: lib.rs
crates_bak/wf-runtime/: Cargo.toml
crates_bak/wf-runtime/src/: admission.rs  checkpoint.rs  lib.rs  test_utils.rs
crates_bak/wf-runtime/src/runtime/: agent_lifecycle.rs  agent_stream.rs  event.rs  optimizer.rs  orchestration.rs  pipeline.rs  runtime.rs  scheduler.rs  validation.rs
crates_bak/wf-tools/src/: agent.rs  builtin.rs  diff_edit.rs  error.rs  memo.rs  search_asset.rs
docs/: ADR-001-command-runtime.md  ADR-002-command-tree-modularization.md  ARCHITECTURE.md  CODE_REVIEW.md  consolidation_fix.md
docs/plans/: reflection_refactor.md
docs/superpowers/plans/: 2026-07-06-agent-system.md
src/: admission.rs  agent.rs  checkpoint.rs  config.rs  conflict.rs  controller.rs  embedding.rs  l0.rs  l1.rs  l1_arbitration.rs  l2.rs  l2_llm.rs  lib.rs  llm.rs  main.rs  models.rs  persistence.rs  pipeline.rs  plan.rs  provider.rs  reflection.rs  resource.rs  runtime.rs  simd.rs  suspend.rs  test_utils.rs  tui.rs  types.rs
src/admission/: mod.rs
src/agent/: agent.rs  mod.rs  plan.rs  suspend.rs
src/core/: conflict.rs  constants.rs  guard.rs  mod.rs  simd.rs  state.rs  traits.rs  types.rs
src/experience/: clustering.rs  dual_track.rs  mod.rs  pool.rs  role_template_store.rs  simple_retriever.rs
src/l0/: mod.rs  resource.rs
src/l1/: arbitration.rs  classifier.rs  mod.rs
src/l2/: llm.rs  mod.rs
src/llm/: chat.rs  embed.rs  embedding.rs  factory.rs  mod.rs  types.rs
src/runtime/: agent_exec.rs  agent_lifecycle.rs  agent_loop.rs  agent_stream.rs  capability.rs  config.rs  decomposition.rs  dispatch.rs  embedding_analyzer.rs  escalation.rs  event.rs  graph_analytics.rs  mod.rs  optimizer.rs  orchestration.rs  pipeline.rs  runtime.rs  runtime_loop.rs  scheduler.rs  strategy_graph.rs  task_graph.rs  validation.rs
src/tools/: agent.rs  builtin.rs  decompose.rs  diff_edit.rs  memo.rs  mod.rs  sandbox.rs  structured.rs
src/traits/: mod.rs
src/tui/: agent_tree.rs  chat.rs  chat_lines.rs  command_machine.rs  command_tree.rs  commands.rs  controller.rs  effect.rs  handler.rs  keymap.rs  mod.rs  popup.rs  proposal.rs  render.rs  runtime_bridge.rs  sidebar.rs  state.rs  status.rs  style.rs  style.rs.bak  tokenizer.rs
src/tui/command_tree/: handlers.rs  mod.rs  provider.rs  runtime.rs
src/tui/commands/: dispatch.rs  mod.rs  (+1 more)
tests/: checkpoint_test.rs  config_test.rs  persistence_test.rs  reflection_test.rs
tool_test_output/: hello_copy.txt  test_tools.md
(+73 files in other folders)
