[package]
name = "workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
smallvec = "1"
memmap2 = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
dashmap = "6"
async-trait = "0.1"
rig-core = "0.37"
rig = "0.37.0"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
