[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Workflow Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
smallvec = "1"
memmap2 = "0.9"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
dashmap = "6"
async-trait = "0.1"
rig = { git = "https://github.com/Yoimiya-Naganohara/rig.git", version = "0.39", features = ["rmcp"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
unicode-width = "0.2"
chrono = "0.4"
reqwest = { version = "0.13", features = ["json", "rustls"] }
async-stream = "0.3"
futures = "0.3"
fastembed = "4"
ort = "=2.0.0-rc.9"
pulldown-cmark = "0.13"
moka = { version = "0.12", features = ["sync"] }
regex = "1"
walkdir = "2"
glob = "0.3"
tiktoken-rs = "0.12"
bincode = "1"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
