[package]
name = "workflow-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rig.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true

[features]
server = []
