[package]
name="workflow-providers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rig.workspace=true
reqwest.workspace=true
anyhow.workspace=true
serde.workspace=true
serde_json.workspace=true
tokio.workspace=true
thiserror.workspace=true
dirs = "6"
workflow-tool = {path="../tool"}

[dev-dependencies]
tempfile.workspace = true
