[package]
name = "wf-agent"
description = "Agent types, pool, plan, suspend"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
wf-core = { path = "../wf-core" }
wf-llm = { path = "../wf-llm" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rand.workspace = true
