[package]
name = "wf-reflection"
description = "Self-check and rule-based reflection"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
wf-core = { path = "../wf-core" }
wf-llm = { path = "../wf-llm" }
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
