[package]
name = "wf-core"
description = "Core types, SIMD, metrics, guard, constants, task graph"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
smallvec.workspace = true
memmap2.workspace = true
bincode.workspace = true
tokio.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
