[package]
name = "wf-l1"
description = "L1 experience retrieval layer"
version.workspace = true
edition.workspace = true

[dependencies]
rand.workspace = true
smallvec.workspace = true
wf-core = { path = "../wf-core" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
