[package]
name = "wf-l2"
description = "L2 audit engine"
version.workspace = true
edition.workspace = true

[dependencies]
wf-llm = { path = "../wf-llm" }
serde_json.workspace = true
async-trait.workspace = true
wf-core = { path = "../wf-core" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
[dev-dependencies]
rig.workspace = true
smallvec.workspace = true
tokio.workspace = true
