[package]
name = "wf-llm"
description = "LLM provider abstraction, embedding, chat"
version.workspace = true
edition.workspace = true

[dependencies]
dashmap.workspace = true
wf-core = { path = "../wf-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rand.workspace = true
rig.workspace = true
fastembed.workspace = true
ort.workspace = true
futures.workspace = true
reqwest.workspace = true
async-stream.workspace = true
moka.workspace = true
tiktoken-rs.workspace = true
