[package]
name = "wf-persistence"
description = "State persistence layer"
version.workspace = true
edition.workspace = true

[dependencies]
wf-agent = { path = "../wf-agent" }
wf-reflection = { path = "../wf-reflection" }
uuid.workspace = true
wf-core = { path = "../wf-core" }
wf-models = { path = "../wf-models" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
