[package]
name = "wf-runtime"
description = "Runtime orchestration, pipeline, lifecycle, scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
wf-core = { path = "../wf-core" }
wf-llm = { path = "../wf-llm" }
wf-l1 = { path = "../wf-l1" }
wf-l2 = { path = "../wf-l2" }
wf-experience = { path = "../wf-experience" }
wf-models = { path = "../wf-models" }
wf-agent = { path = "../wf-agent" }
wf-tools = { path = "../wf-tools" }
wf-persistence = { path = "../wf-persistence" }
wf-reflection = { path = "../wf-reflection" }
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
dashmap.workspace = true
uuid.workspace = true
rand.workspace = true
rig.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
